added code for currency converter api